# real-time-transcription

./: README.md  main.py  pyproject.toml
